# Shelby-Suit

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  nginx.conf  start-demo.ps1
.github/: dependabot.yml
.github/workflows/: ci.yml
batch-manager/: .dockerignore  Dockerfile  README.md  batch-manager.db  jest.config.js  package-lock.json  package.json  tsconfig.json
batch-manager/config/: accounts.yaml
batch-manager/src/: manager.ts
batch-manager/tests/: integration.test.ts  manager.test.ts  queue.test.ts  strategies.test.ts
expiry-guard/: .dockerignore  Dockerfile  README.md  setup.py
expiry-guard/expiry_monitor/: alerter.py  config.py  renewal.py  tracker.py
expiry-guard/scripts/: check-expiry.sh  generate-report.sh  run_guard.py  send-alerts.sh
expiry-guard/tests/: test_expiry_guard.py  test_integration.py
nextjs-dashboard/: .eslintrc.json  Dockerfile  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
nextjs-dashboard/e2e/: dashboard.spec.ts
nextjs-dashboard/tests/: badge.test.tsx  card.test.tsx  utils.test.ts
python-sdk/: .dockerignore  Dockerfile  LICENSE  MANIFEST.in  README.md  publish.ps1  pyproject.toml  requirements.txt  setup.py
python-sdk/examples/: account_management.py  basic_upload.py  batch_upload.py  blob_management.py  data_science.py
python-sdk/shelby_sdk/: __init__.py  account.py  blob.py  client.py  config.py  download.py  exceptions.py  upload.py  utils.py
python-sdk/tests/: conftest.py  test_client.py  test_download.py  test_upload.py
shared/: package.json  tsconfig.json
shared/types/: account.ts  blob.ts  config.ts  shelby.ts
(+63 files in other folders)
